add monks life content

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm">
+<nav class="navbar fixed-top navbar-expand-sm bg-body">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ site.baseurl }}/">
       <img src="{{ site.baseurl }}{% link assets/images/logo-eop.png %}" width="32" height="32" />
