--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-top navbar-expand-sm bg-body">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ site.baseurl }}/">
-      <img src="{{ site.baseurl }}{% link assets/images/logo-eop.png %}" width="32" height="32" />
+      <img src="{{ site.baseurl }}{% link assets/images/logo-monks-life.png %}" width="32" height="32" />
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
