--- a/main.scss
+++ b/main.scss
@@ -59,7 +59,7 @@ a:hover {
 }
 
 #index-header {
-  background-image: url("assets/images/logo-eop.png");
+  background-image: url("assets/images/logo-monks-life.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
