update address in footer.html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,13 +7,12 @@
       <div class="col-12 col-sm-6 footer-description">
         Address of the training program<br>
         <address>
-          Wat Phra Dhammakaya London<br>
-          2 Brushfield Way<br>
-          Knaphill<br>
-          Woking GU21 2TG<br>
+          Wat Phra Dhammakaya Belgium<br>
+          Ronkenburgstraat 25, B-9340<br>
+          Lede, Aalst<br>
+          Belgium<br>
         </address>
           For further information:<br>
-          <a href="tel:+447519546556">(+44) 07519546556</a><br>
           <a href="mailto:info@dhammakaya.nl">info@dhammakaya.nl</a><br>
       </div>
       <div class="col-12 col-sm-6 footer-description">
