consolidate apply link; add call to action to index page; tweak program details content;

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,7 @@
           {% endif %}
         {% endfor %}
         <li class="nav-item text-center">
-          <a class="nav-link d-inline-flex align-items-baseline" href="https://forms.gle/KxcHbeLUMkrtbVQ68" target="_blank" rel="noopener noreferrer">
+          <a class="nav-link d-inline-flex align-items-baseline" href="{{ site.form_link }}" target="_blank" rel="noopener noreferrer">
             Apply
             &nbsp;
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
