--- a/_includes/index-title-video.html
+++ b/_includes/index-title-video.html
@@ -11,12 +11,14 @@
         allowfullscreen
       ></iframe>
     </div>
+    {{ include.extra_xs_content }}
   </div>
   <!-- md and wider -->
-  <div class="d-none d-md-flex col-12 col-md-5 flex-column justify-content-center">
+  <div class="d-none d-md-flex col-12 col-md-5 flex-column justify-content-center text-end">
     <div class="display-6">
       {{ include.title }}
     </div>
+    {{ include.extra_md_content }}
   </div>
   <div class="d-none d-md-flex col-12 col-md-7 align-items-center justify-content-center">
     <div class="ratio ratio-16x9">
