--- a/_includes/index-video-title.html
+++ b/_includes/index-video-title.html
@@ -22,7 +22,7 @@
       ></iframe>
     </div>
   </div>
-  <div class="d-none d-md-flex col-12 col-md-5 flex-column justify-content-center text-end">
+  <div class="d-none d-md-flex col-12 col-md-5 flex-column justify-content-center">
     <div class="display-6">
       {{ include.title }}
     </div>
