--- a/_includes/index-video-title.html
+++ b/_includes/index-video-title.html
@@ -11,6 +11,7 @@
         allowfullscreen
       ></iframe>
     </div>
+    {{ include.extra_xs_content }}
   </div>
   <!-- md and wider -->
   <div class="d-none d-md-flex col-12 col-md-7 align-items-center justify-content-center">
@@ -26,5 +27,6 @@
     <div class="display-6">
       {{ include.title }}
     </div>
+    {{ include.extra_md_content }}
   </div>
 </div>
