add teachers menu item on mobile nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,6 +25,8 @@
           </ul>
         </li>
         {% include nav-item.html path="about/index.html" nav_title="Program details" extra_classes=" d-sm-none" %}
+        <!-- regular menu item for xs -->
+        {% include nav-item.html path="about/teachers.html" nav_title="&nbsp; └─ Teachers" extra_classes=" d-sm-none" %}
         {% include nav-item.html path="media/index.html" nav_title="Media" %}
         <li class="nav-item text-center">
           <a class="nav-link d-inline-flex align-items-baseline" href="{{ site.form_link }}" target="_blank" rel="noopener noreferrer">
